# pysrt

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  Taskfile.yml  pyproject.toml
.github/workflows/: ci.yml
pysrt/: __init__.py  commands.py  comparablemixin.py  compat.py  srtexc.py  srtfile.py  srtitem.py  srttime.py  timing.py  validation.py  version.py
tests/: test_srtfile.py  test_srtitem.py  test_srttime.py  test_timing.py  test_validation.py
