[project]
name = "pysrt"
version = "1.1.2"
description = "SubRip (.srt) subtitle parser and writer"
readme = "README.rst"
license = "GPL-3.0-or-later"
authors = [
    { name = "Jean Boussier", email = "jean.boussier@gmail.com" }
]
maintainers = [
    { name = "lepinkainen" }
]
keywords = ["SubRip", "srt", "subtitle"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
    "Topic :: Software Development :: Libraries",
    "Topic :: Text Processing :: Markup",
]
requires-python = ">=3.11"
dependencies = [
    "chardet>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[project.scripts]
srt = "pysrt.commands:main"

[project.urls]
Homepage = "https://github.com/byroot/pysrt"
Repository = "https://github.com/lepinkainen/pysrt"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pysrt"]

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = ["llm-shared"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip() without strict= is fine for this codebase
    "UP031",  # allow % format for regex patterns
]

[tool.ruff.lint.isort]
known-first-party = ["pysrt"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
exclude = ["llm-shared", "tests"]

[[tool.mypy.overrides]]
module = "chardet.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q --ignore=llm-shared"
